# packages/rosaenlg-node-server/src/RosaeContext.ts
@@ -1,40 +1,76 @@
-import { PackagedTemplate } from 'gulp-rosaenlg/dist/PackagedTemplate';
-import { compileFile, NlgLib } from 'rosaenlg';
+import { PackagedTemplate, PackagedTemplateSrc, PackagedTemplateComp } from 'gulp-rosaenlg';
+import { compileFileClient, getRosaeNlgVersion, NlgLib } from 'rosaenlg';
 import { RenderOptions } from './RenderOptions';
 import { RenderedBundle } from './RenderedBundle';
 import winston = require('winston');
-// import {inspect} from 'util';
 
-interface PackagedTemplateWithUser extends PackagedTemplate {
+export interface PackagedTemplateWithUser extends PackagedTemplate {
   user: string;
 }
 
 export class RosaeContext {
-  private originalPackagedTemplate: PackagedTemplate;
+  private static ROSAENLG_VERSION = getRosaeNlgVersion();
+
+  private format: string; // for future use
+  private user: string;
   private templateId: string;
+  private templateSrcPart: PackagedTemplateSrc;
+  private templateCompPart: PackagedTemplateComp;
+
   private compiledFct: Function;
+  public hadToCompile: boolean;
 
   constructor(packagedTemplateWithUser: PackagedTemplateWithUser) {
-    this.originalPackagedTemplate = packagedTemplateWithUser;
     this.templateId = packagedTemplateWithUser.templateId;
+    this.user = packagedTemplateWithUser.user;
+    this.format = packagedTemplateWithUser.format;
+    this.templateSrcPart = packagedTemplateWithUser.src;
 
     winston.info({ templateId: this.templateId, message: `RosaeContext constructor` });
 
-    const opts: any = Object.assign({}, packagedTemplateWithUser.compileInfo);
-    opts.staticFs = packagedTemplateWithUser.templates;
+    // only compile if useful
+    if (
+      packagedTemplateWithUser.comp &&
+      packagedTemplateWithUser.comp.compiledWithVersion === RosaeContext.ROSAENLG_VERSION &&
+      packagedTemplateWithUser.comp.compiled != null &&
+      packagedTemplateWithUser.comp.compiled != ''
+    ) {
+      this.templateCompPart = packagedTemplateWithUser.comp;
+      this.hadToCompile = false;
+      winston.info({
+        templateId: this.templateId,
+        message: `was already compiled: ${this.templateCompPart.compiledBy} ${this.templateCompPart.compiledWhen}`,
+      });
+    } else {
+      // compile
+      try {
+        const opts: any = Object.assign({}, packagedTemplateWithUser.src.compileInfo);
+        opts.staticFs = packagedTemplateWithUser.src.templates;
+        opts.embedResources = true;
 
-    // compile
-    try {
-      this.compiledFct = compileFile(packagedTemplateWithUser.entryTemplate, opts);
-    } catch (e) {
-      const err = new Error();
-      err.name = 'InvalidArgumentError';
-      err.message = `cannot compile: ${e.message}`;
-      throw err;
+        this.templateCompPart = {
+          compiledWithVersion: RosaeContext.ROSAENLG_VERSION,
+          compiled: compileFileClient(packagedTemplateWithUser.src.entryTemplate, opts),
+          compiledBy: 'rosaenlg-node-server',
+          compiledWhen: new Date().toISOString(),
+        };
+
+        winston.info({
+          templateId: this.templateId,
+          message: `properly compiled with RosaeNLG version ${RosaeContext.ROSAENLG_VERSION}`,
+        });
+      } catch (e) {
+        const err = new Error();
+        err.name = 'InvalidArgumentError';
+        err.message = `cannot compile: ${e.message}`;
+        throw err;
+      }
+      this.hadToCompile = true;
     }
+    this.compiledFct = new Function('params', `${this.templateCompPart.compiled}; return template(params);`);
 
     // autotest
-    const autotest = packagedTemplateWithUser.autotest;
+    const autotest = packagedTemplateWithUser.src.autotest;
     if (autotest != null && autotest.activate) {
       winston.info({ templateId: this.templateId, message: `autotest is activated` });
 
@@ -59,8 +95,6 @@ export class RosaeContext {
       }
       // everything went ok
     }
-
-    // console.log(this.compiledFct.toString());
   }
 
   public render(options: any): RenderedBundle {
@@ -87,7 +121,13 @@ export class RosaeContext {
     return this.templateId;
   }
 
-  public getPackagedTemplate(): PackagedTemplate {
-    return this.originalPackagedTemplate;
+  public getFullTemplate(): PackagedTemplateWithUser {
+    return {
+      format: this.format,
+      templateId: this.templateId,
+      user: this.user,
+      src: this.templateSrcPart,
+      comp: this.templateCompPart,
+    } as PackagedTemplateWithUser;
   }
 }
